# machine-learning

./: .gitignore  README.md  project.py  pyproject.toml
instance-based-learning/: k-nn-regression.py
model-based-learning/: linear-regression.py
